--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   </head>
 
   <body>
+    <!-- Logo do FeedCast -->
     <header class="header container-wrapper">
       <figure class="header__logo">
         <svg
